--- a/.travis.yml
+++ b/.travis.yml
@@ -13,27 +13,23 @@ install:
 before_script:
   - echo "no tests"
 
-env:
-  global:
-    - BUILD_TAG="v1"
-
 script:
   # Build udagram-api-feed
   - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker tag udagram-api-feed duyto/udagram-api-feed:$BUILD_TAG
+  - docker tag udagram-api-feed duyto/udagram-api-feed:v1
   # Build udagram-api-user
   - docker build -t udagram-api-user ./udagram-api-user
-  - docker tag udagram-api-user duyto/udagram-api-user:$BUILD_TAG
+  - docker tag udagram-api-user duyto/udagram-api-user:v1
   # Build udagram-frontend
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-frontend duyto/udagram-frontend:$BUILD_TAG
+  - docker tag udagram-frontend duyto/udagram-frontend:v1
   # Build reverseproxy
   - docker build -t reverseproxy ./udagram-reverseproxy
-  - docker tag reverseproxy duyto/reverseproxy:$BUILD_TAG
+  - docker tag reverseproxy duyto/reverseproxy:v1
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push duyto/udagram-api-feed:$BUILD_TAG
-  - docker push duyto/udagram-api-user:$BUILD_TAG
-  - docker push duyto/udagram-frontend:$BUILD_TAG
-  - docker push duyto/reverseproxy:$BUILD_TAG
+  - docker push duyto/udagram-api-feed:v1
+  - docker push duyto/udagram-api-user:v1
+  - docker push duyto/udagram-frontend:v1
+  - docker push duyto/reverseproxy:v1
