--- a/reverseproxy-service.yaml
+++ b/reverseproxy-service.yaml
@@ -8,6 +8,6 @@ spec:
   ports:
   - name: "8080"
     port: 8080
-    targetPort: 80
+    targetPort: 8080
   selector:
-    service: reverseproxy
+    app: reverseproxy
