--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -16,11 +16,11 @@ spec:
     spec:
       containers:
       - name: backend-feed
-        image: duyto/udagram-api-feed:v5
+        image: duyto/udagram-api-feed:v1
         volumeMounts:
         - name: aws-credentials-volume
-          mountPath: /root/.aws
-          subPath: credentials 
+          mountPath: /root/.aws/credentials
+          subPath: credentials
         env:
         - name: POSTGRES_HOST
           valueFrom:
@@ -74,6 +74,19 @@ spec:
               key: POSTGRES_PASSWORD
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "1024Mi"
+            cpu: "1"
+          limits:
+            memory: "2048Mi"
+            cpu: "2"  
+        livenessProbe:
+          httpGet:
+            path: /api/v0/feed
+            port: 8080
+          initialDelaySeconds: 60
+          periodSeconds: 60
       volumes:
       - name: aws-credentials-volume
         secret:
