--- a/backend-user-deployment.yaml
+++ b/backend-user-deployment.yaml
@@ -19,8 +19,8 @@ spec:
         image: duyto/udagram-api-user:v1
         volumeMounts:
         - name: aws-credentials-volume
-          mountPath: /root/.aws
-          subPath: credentials 
+          mountPath: /root/.aws/credentials
+          subPath: credentials
         env:
         - name: POSTGRES_HOST
           valueFrom:
@@ -74,6 +74,13 @@ spec:
               key: POSTGRES_PASSWORD
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "1024Mi"
+            cpu: "1"
+          limits:
+            memory: "2048Mi"
+            cpu: "2"  
       volumes:
       - name: aws-credentials-volume
         secret:
