--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -19,4 +19,10 @@ spec:
         image: duyto/reverseproxy:v1
         ports:
         - containerPort: 8080
-
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "500m"
+          limits:
+            memory: "1024Mi"
+            cpu: "500m"
