--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -21,9 +21,8 @@ spec:
         - containerPort: 80
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "500m"
+            memory: "2048Mi"        # Minimum memory request
+            cpu: "500m"            # Minimum CPU request
           limits:
-            memory: "1024Mi"
-            cpu: "500m"  
-
+            memory: "4096Mi"        # Maximum memory limit
+            cpu: "1"
