--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -17,12 +17,12 @@ spec:
       containers:
       - name: reverseproxy
         image: duyto/reverseproxy:v1
-        ports:
-        - containerPort: 8080
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "500m"
+            memory: "2048Mi"        # Minimum memory request
+            cpu: "500m"            # Minimum CPU request
           limits:
-            memory: "1024Mi"
-            cpu: "500m"
+            memory: "4096Mi"        # Maximum memory limit
+            cpu: "1"
+        ports:
+        - containerPort: 8080
